--- a/object_detection.ipynb
+++ b/object_detection.ipynb
@@ -16,27 +16,27 @@
         "\n",
         "!pip install pillow_heif\n",
         "\n",
-        "import cv2, numpy as np, matplotlib.pyplot as plt\n",
+        "import cv2,numpy as np,matplotlib.pyplot as plt\n",
         "from google.colab import files\n",
-        "from IPython.display import Image, display\n",
+        "from IPython.display import Image,display\n",
         "import pillow_heif\n",
         "from PIL import Image as PILImage\n",
         "import os\n",
         "\n",
-        "uploaded = files.upload()\n",
-        "filename = next(iter(uploaded))\n",
+        "uploaded=files.upload()\n",
+        "filename=next(iter(uploaded))\n",
         "\n",
         "if filename.lower().endswith('.heic'):\n",
-        "    heif_file = pillow_heif.read_heif(filename)\n",
-        "    image = PILImage.frombytes(heif_file.mode, heif_file.size, heif_file.data, \"raw\", heif_file.mode, heif_file.stride)\n",
-        "    image.save('temp.jpg', 'JPEG')\n",
-        "    image = cv2.imread('temp.jpg')\n",
+        "    heif_file=pillow_heif.read_heif(filename)\n",
+        "    image=PILImage.frombytes(heif_file.mode,heif_file.size,heif_file.data,\"raw\",heif_file.mode,heif_file.stride)\n",
+        "    image.save('temp.jpg','JPEG')\n",
+        "    image=cv2.imread('temp.jpg')\n",
         "    os.remove('temp.jpg')\n",
         "else:\n",
-        "    image = cv2.imread(filename)\n",
+        "    image=cv2.imread(filename)\n",
         "\n",
-        "image_rgb = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
-        "plt.figure(figsize=(10, 5))\n",
+        "image_rgb=cv2.cvtColor(image,cv2.COLOR_BGR2RGB)\n",
+        "plt.figure(figsize=(10,5))\n",
         "plt.subplot(121)\n",
         "plt.imshow(image_rgb)\n",
         "plt.title('Input')\n",
@@ -49,42 +49,52 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "params = {'hsv_lower': np.array([0, 0, 200]), 'hsv_upper': np.array([180, 30, 255]), 'min_area': 100, 'max_area': 5000}\n",
+        "params={'hsv_lower':np.array([0,0,180]),'hsv_upper':np.array([180,50,255]),'min_area':200,'max_area':8000}\n",
         "\n",
-        "def detect(image, params):\n",
-        "    hsv = cv2.cvtColor(image, cv2.COLOR_BGR2HSV)\n",
-        "    mask = cv2.inRange(hsv, params['hsv_lower'], params['hsv_upper'])\n",
-        "    kernel = np.ones((5,5), np.uint8)\n",
-        "    mask = cv2.morphologyEx(mask, cv2.MORPH_OPEN, kernel)\n",
-        "    mask = cv2.morphologyEx(mask, cv2.MORPH_CLOSE, kernel)\n",
-        "    contours, _ = cv2.findContours(mask, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
-        "    result = image.copy()\n",
-        "    balls = []\n",
+        "def detect(image,params):\n",
+        "    hsv=cv2.cvtColor(image,cv2.COLOR_BGR2HSV)\n",
+        "    mask=cv2.inRange(hsv,params['hsv_lower'],params['hsv_upper'])\n",
+        "    kernel=np.ones((5,5),np.uint8)\n",
+        "    mask=cv2.morphologyEx(mask,cv2.MORPH_OPEN,kernel)\n",
+        "    mask=cv2.morphologyEx(mask,cv2.MORPH_CLOSE,kernel)\n",
+        "    contours,_=cv2.findContours(mask,cv2.RETR_EXTERNAL,cv2.CHAIN_APPROX_SIMPLE)\n",
+        "    result=image.copy()\n",
+        "    objects=[]\n",
         "    \n",
         "    for c in contours:\n",
-        "        area = cv2.contourArea(c)\n",
-        "        if params['min_area'] < area < params['max_area']:\n",
-        "            x, y, w, h = cv2.boundingRect(c)\n",
-        "            cv2.rectangle(result, (x, y), (x + w, y + h), (0, 255, 0), 2)\n",
-        "            balls.append((x, y, w, h))\n",
+        "        area=cv2.contourArea(c)\n",
+        "        if params['min_area']<area<params['max_area']:\n",
+        "            perimeter=cv2.arcLength(c,True)\n",
+        "            circularity=4*np.pi*area/(perimeter*perimeter) if perimeter>0 else 0\n",
+        "            x,y,w,h=cv2.boundingRect(c)\n",
+        "            is_ball=circularity>0.7\n",
+        "            label=\"Ball\" if is_ball else \"Paper\"\n",
+        "            color=(0,255,0) if is_ball else (255,0,0)\n",
+        "            cv2.rectangle(result,(x,y),(x+w,y+h),color,2)\n",
+        "            cv2.putText(result,label,(x,y-10),cv2.FONT_HERSHEY_SIMPLEX,0.9,color,2)\n",
+        "            objects.append((x,y,w,h,label))\n",
         "    \n",
-        "    return result, mask, balls\n",
+        "    return result,mask,objects\n",
         "\n",
-        "result, mask, balls = detect(image, params)\n",
-        "result_rgb = cv2.cvtColor(result, cv2.COLOR_BGR2RGB)\n",
+        "result,mask,objects=detect(image,params)\n",
+        "result_rgb=cv2.cvtColor(result,cv2.COLOR_BGR2RGB)\n",
         "\n",
         "plt.subplot(122)\n",
         "plt.imshow(result_rgb)\n",
-        "plt.title(f'Detected: {len(balls)}')\n",
+        "plt.title(f'Objects: {len(objects)}')\n",
         "plt.axis('off')\n",
         "plt.tight_layout()\n",
         "plt.show()\n",
         "\n",
-        "plt.figure(figsize=(5, 5))\n",
-        "plt.imshow(mask, cmap='gray')\n",
+        "plt.figure(figsize=(5,5))\n",
+        "plt.imshow(mask,cmap='gray')\n",
         "plt.title('Mask')\n",
         "plt.axis('off')\n",
-        "plt.show()\n"
+        "plt.show()\n",
+        "\n",
+        "print(\"\\nObjects:\")\n",
+        "for i,(x,y,w,h,label) in enumerate(objects,1):\n",
+        "    print(f\"{i}. {label} at ({x},{y})\")\n"
       ]
     },
     {
@@ -98,15 +108,15 @@
         "## If the wrong color is being detected:\n",
         "Change these numbers in `white_detector`:\n",
         "```python\n",
-        "'hsv_lower': np.array([0, 0, 200])    # Make last number smaller if balls are darker\n",
-        "'hsv_upper': np.array([180, 30, 255]) # Make middle number bigger if balls are not pure white\n",
+        "'hsv_lower': np.array([0, 0, 200])   \n",
+        "'hsv_upper': np.array([180, 30, 255]) \n",
         "```\n",
         "\n",
         "## If wrong sized objects are being detected:\n",
         "Change these numbers:\n",
         "```python\n",
-        "'min_area': 100   # Make this bigger to ignore small white spots\n",
-        "'max_area': 5000  # Make this smaller to ignore large white areas\n",
+        "'min_area': 100 \n",
+        "'max_area': 5000 \n",
         "```\n",
         "\n",
         "Just change the numbers and run the cell again to see what happens! 🔄\n",
