--- a/object_detection.ipynb
+++ b/object_detection.ipynb
@@ -49,14 +49,16 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "params={'hsv_lower':np.array([0,0,180]),'hsv_upper':np.array([180,50,255]),'min_area':200,'max_area':8000}\n",
+        "params={'hsv_lower':np.array([0,0,200]),'hsv_upper':np.array([180,30,255]),'min_area':1000,'max_area':50000}\n",
         "\n",
         "def detect(image,params):\n",
         "    hsv=cv2.cvtColor(image,cv2.COLOR_BGR2HSV)\n",
         "    mask=cv2.inRange(hsv,params['hsv_lower'],params['hsv_upper'])\n",
-        "    kernel=np.ones((5,5),np.uint8)\n",
+        "    \n",
+        "    kernel=np.ones((7,7),np.uint8)\n",
         "    mask=cv2.morphologyEx(mask,cv2.MORPH_OPEN,kernel)\n",
         "    mask=cv2.morphologyEx(mask,cv2.MORPH_CLOSE,kernel)\n",
+        "    \n",
         "    contours,_=cv2.findContours(mask,cv2.RETR_EXTERNAL,cv2.CHAIN_APPROX_SIMPLE)\n",
         "    result=image.copy()\n",
         "    objects=[]\n",
@@ -66,13 +68,23 @@
         "        if params['min_area']<area<params['max_area']:\n",
         "            perimeter=cv2.arcLength(c,True)\n",
         "            circularity=4*np.pi*area/(perimeter*perimeter) if perimeter>0 else 0\n",
-        "            x,y,w,h=cv2.boundingRect(c)\n",
+        "            \n",
+        "            (x,y),radius=cv2.minEnclosingCircle(c)\n",
+        "            center=(int(x),int(y))\n",
+        "            radius=int(radius)\n",
+        "            \n",
         "            is_ball=circularity>0.7\n",
         "            label=\"Ball\" if is_ball else \"Paper\"\n",
         "            color=(0,255,0) if is_ball else (255,0,0)\n",
-        "            cv2.rectangle(result,(x,y),(x+w,y+h),color,2)\n",
-        "            cv2.putText(result,label,(x,y-10),cv2.FONT_HERSHEY_SIMPLEX,0.9,color,2)\n",
-        "            objects.append((x,y,w,h,label))\n",
+        "            \n",
+        "            if is_ball:\n",
+        "                cv2.circle(result,center,radius,color,3)\n",
+        "            else:\n",
+        "                x,y,w,h=cv2.boundingRect(c)\n",
+        "                cv2.rectangle(result,(x,y),(x+w,y+h),color,3)\n",
+        "            \n",
+        "            cv2.putText(result,label,center,cv2.FONT_HERSHEY_SIMPLEX,1.5,color,3)\n",
+        "            objects.append((int(x),int(y),label))\n",
         "    \n",
         "    return result,mask,objects\n",
         "\n",
@@ -92,9 +104,9 @@
         "plt.axis('off')\n",
         "plt.show()\n",
         "\n",
-        "print(\"\\nObjects:\")\n",
-        "for i,(x,y,w,h,label) in enumerate(objects,1):\n",
-        "    print(f\"{i}. {label} at ({x},{y})\")\n"
+        "print(\"\\nDetected Objects:\")\n",
+        "for i,(x,y,label) in enumerate(objects,1):\n",
+        "    print(f\"{i}. {label}\")\n"
       ]
     },
     {
