--- a/object_detection.ipynb
+++ b/object_detection.ipynb
@@ -49,13 +49,13 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "params={'hsv_lower':np.array([0,0,200]),'hsv_upper':np.array([180,30,255]),'min_area':1000,'max_area':50000}\n",
+        "params={'hsv_lower':np.array([0,0,180]),'hsv_upper':np.array([180,60,255]),'min_area':5000,'max_area':100000}\n",
         "\n",
         "def detect(image,params):\n",
         "    hsv=cv2.cvtColor(image,cv2.COLOR_BGR2HSV)\n",
         "    mask=cv2.inRange(hsv,params['hsv_lower'],params['hsv_upper'])\n",
         "    \n",
-        "    kernel=np.ones((7,7),np.uint8)\n",
+        "    kernel=np.ones((11,11),np.uint8)\n",
         "    mask=cv2.morphologyEx(mask,cv2.MORPH_OPEN,kernel)\n",
         "    mask=cv2.morphologyEx(mask,cv2.MORPH_CLOSE,kernel)\n",
         "    \n",
@@ -73,17 +73,19 @@
         "            center=(int(x),int(y))\n",
         "            radius=int(radius)\n",
         "            \n",
-        "            is_ball=circularity>0.7\n",
+        "            aspect_ratio=1\n",
+        "            if len(c) > 5:\n",
+        "                (x,y),(MA,ma),angle=cv2.fitEllipse(c)\n",
+        "                aspect_ratio=ma/MA if MA > 0 else 1\n",
+        "            \n",
+        "            is_ball=circularity>0.6 and 0.8<aspect_ratio<1.2\n",
         "            label=\"Ball\" if is_ball else \"Paper\"\n",
         "            color=(0,255,0) if is_ball else (255,0,0)\n",
         "            \n",
         "            if is_ball:\n",
         "                cv2.circle(result,center,radius,color,3)\n",
-        "            else:\n",
-        "                x,y,w,h=cv2.boundingRect(c)\n",
-        "                cv2.rectangle(result,(x,y),(x+w,y+h),color,3)\n",
+        "                cv2.putText(result,\"Ball\",center,cv2.FONT_HERSHEY_SIMPLEX,1.5,color,3)\n",
         "            \n",
-        "            cv2.putText(result,label,center,cv2.FONT_HERSHEY_SIMPLEX,1.5,color,3)\n",
         "            objects.append((int(x),int(y),label))\n",
         "    \n",
         "    return result,mask,objects\n",
