--- a/object_detection.ipynb
+++ b/object_detection.ipynb
@@ -57,45 +57,25 @@
         "    \n",
         "    kernel=np.ones((5,5),np.uint8)\n",
         "    mask=cv2.morphologyEx(mask,cv2.MORPH_OPEN,kernel)\n",
+        "    mask=cv2.morphologyEx(mask,cv2.MORPH_CLOSE,kernel)\n",
         "    \n",
         "    contours,_=cv2.findContours(mask,cv2.RETR_EXTERNAL,cv2.CHAIN_APPROX_SIMPLE)\n",
         "    result=image.copy()\n",
         "    objects=[]\n",
         "    \n",
-        "    # Find all white regions\n",
-        "    white_regions=[]\n",
         "    for c in contours:\n",
         "        area=cv2.contourArea(c)\n",
-        "        if area>params['min_area']:\n",
-        "            M=cv2.moments(c)\n",
-        "            if M['m00']!=0:\n",
-        "                cx=int(M['m10']/M['m00'])\n",
-        "                cy=int(M['m01']/M['m00'])\n",
-        "                white_regions.append((cx,cy,area))\n",
-        "    \n",
-        "    # If we have multiple white regions, check if they form a circle\n",
-        "    if len(white_regions)>=3:\n",
-        "        # Find center point of all regions\n",
-        "        avg_x=sum(x for x,y,_ in white_regions)/len(white_regions)\n",
-        "        avg_y=sum(y for x,y,_ in white_regions)/len(white_regions)\n",
-        "        center=(int(avg_x),int(avg_y))\n",
-        "        \n",
-        "        # Calculate distances from center to each region\n",
-        "        distances=[np.sqrt((x-avg_x)**2+(y-avg_y)**2) for x,y,_ in white_regions]\n",
-        "        avg_radius=sum(distances)/len(distances)\n",
-        "        \n",
-        "        # Check if points form a roughly circular pattern\n",
-        "        is_circular=True\n",
-        "        for d in distances:\n",
-        "            if abs(d-avg_radius)/avg_radius>0.3:  # Allow 30% deviation\n",
-        "                is_circular=False\n",
-        "                break\n",
-        "        \n",
-        "        if is_circular:\n",
-        "            radius=int(avg_radius*1.2)  # Slightly larger circle to encompass all holes\n",
-        "            cv2.circle(result,center,radius,(0,255,0),3)\n",
-        "            cv2.putText(result,\"Ball\",center,cv2.FONT_HERSHEY_SIMPLEX,1.5,(0,255,0),3)\n",
-        "            objects.append((center[0],center[1],\"Ball\"))\n",
+        "        if params['min_area']<area<params['max_area']:\n",
+        "            perimeter=cv2.arcLength(c,True)\n",
+        "            circularity=4*np.pi*area/(perimeter*perimeter) if perimeter>0 else 0\n",
+        "            \n",
+        "            if circularity>0.7:\n",
+        "                (x,y),radius=cv2.minEnclosingCircle(c)\n",
+        "                center=(int(x),int(y))\n",
+        "                radius=int(radius)\n",
+        "                cv2.circle(result,center,radius,(0,255,0),3)\n",
+        "                cv2.putText(result,\"Ball\",center,cv2.FONT_HERSHEY_SIMPLEX,1.5,(0,255,0),3)\n",
+        "                objects.append((center[0],center[1],\"Ball\"))\n",
         "    \n",
         "    return result,mask,objects\n",
         "\n",
