print state to see whats wrong

--- a/object_detection.ipynb
+++ b/object_detection.ipynb
@@ -54,28 +54,41 @@
         "def detect(image,params):\n",
         "    hsv=cv2.cvtColor(image,cv2.COLOR_BGR2HSV)\n",
         "    mask=cv2.inRange(hsv,params['hsv_lower'],params['hsv_upper'])\n",
+        "    print(f\"Number of white pixels in initial mask: {np.sum(mask == 255)}\")\n",
         "    \n",
         "    kernel=np.ones((5,5),np.uint8)\n",
         "    mask=cv2.morphologyEx(mask,cv2.MORPH_OPEN,kernel)\n",
         "    mask=cv2.morphologyEx(mask,cv2.MORPH_CLOSE,kernel)\n",
+        "    print(f\"Number of white pixels after morphology: {np.sum(mask == 255)}\")\n",
         "    \n",
         "    contours,_=cv2.findContours(mask,cv2.RETR_EXTERNAL,cv2.CHAIN_APPROX_SIMPLE)\n",
+        "    print(f\"Number of contours found: {len(contours)}\")\n",
+        "    \n",
         "    result=image.copy()\n",
         "    objects=[]\n",
         "    \n",
-        "    for c in contours:\n",
+        "    for i,c in enumerate(contours):\n",
         "        area=cv2.contourArea(c)\n",
+        "        print(f\"\\nContour {i} - Area: {area}\")\n",
+        "        \n",
         "        if params['min_area']<area<params['max_area']:\n",
+        "            print(f\"Area {area} is within bounds ({params['min_area']}, {params['max_area']})\")\n",
         "            perimeter=cv2.arcLength(c,True)\n",
         "            circularity=4*np.pi*area/(perimeter*perimeter) if perimeter>0 else 0\n",
+        "            print(f\"Perimeter: {perimeter}, Circularity: {circularity}\")\n",
         "            \n",
         "            if circularity>0.7:\n",
+        "                print(f\"Circularity {circularity} > 0.7, detecting as ball\")\n",
         "                (x,y),radius=cv2.minEnclosingCircle(c)\n",
         "                center=(int(x),int(y))\n",
         "                radius=int(radius)\n",
         "                cv2.circle(result,center,radius,(0,255,0),3)\n",
         "                cv2.putText(result,\"Ball\",center,cv2.FONT_HERSHEY_SIMPLEX,1.5,(0,255,0),3)\n",
         "                objects.append((center[0],center[1],\"Ball\"))\n",
+        "            else:\n",
+        "                print(f\"Circularity {circularity} too low, not circular enough\")\n",
+        "        else:\n",
+        "            print(f\"Area {area} outside bounds\")\n",
         "    \n",
         "    return result,mask,objects\n",
         "\n",
